fix multiselect z-index

--- a/www/css/homematic-manager.css
+++ b/www/css/homematic-manager.css
@@ -268,3 +268,7 @@ textarea {
 #console-rpc-method_ms {
     height: 28px;
 }
+
+.ui-multiselect-menu {
+    z-index: 10000;
+}
